# poker

./: .gitignore  Poker.sln  README.md
Native/: CMakeLists.txt  configure.bat
Native/Src/: API.h  BlurFB.cpp  ChipsBuffer.cpp  Graphics.cpp  Graphics.h  Input.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMatrixBuffer.cpp  Skybox.cpp  SpriteBatch.cpp  Texture2D.cpp  Texture2D.h  UniformBuffer.cpp  Utils.cpp  Utils.h  Window.cpp
Poker/: Assets.cs  BoardModel.cs  Camera.cs  Card.cs  Color.cs  EndSummary.cs  KeyboardState.cs  Keys.cs  Log.cs  MathF.cs  MenuBackground.cs  MenuButton.cs  MouseState.cs  Poker.csproj  PokerCore.csproj  Program.cs  SpriteFont.cs  Suits.cs  TextBox.cs  TotalsPane.cs  UI.cs  Utils.cs  ViewProjUniformBuffer.cs
Poker/GLTF/: GLTFImporter.cs  InvalidGLTFException.cs  Mesh.cs  Model.cs
Poker/Game/: GameDriver.cs  HandStage.cs  Player.cs
Poker/GameStates/: ConnectingGameState.cs  GameState.cs  GameStateManager.cs  LobbyGameState.cs  MainGameState.cs  MainMenuGameState.cs
Poker/Graphics/: BlurEffect.cs  BoardShader.cs  CardRenderer.cs  CardsTexture.cs  ChipsRenderer.cs  Graphics.cs  MaterialSettings.cs  Mesh.cs  ModelInstance.cs  PlayerNameRenderer.cs  Shader.cs  ShadowMapper.cs  SkyRenderer.cs  SpriteBatch.cs  TextMeshBuilder.cs  TextVertex.cs  Texture2D.cs  UniformBuffer.cs  Vertex.cs
Poker/Hands/: Flush.cs  FourOfAKind.cs  FullHouse.cs  Hand.cs  HighCard.cs  Pair.cs  Straight.cs  StraightFlush.cs  ThreeOfAKind.cs  TwoPair.cs
Poker/Net/: Connection.cs  ConnectionResponseStatus.cs  CryptoUtils.cs  DeckEncrypter.cs  (+7 more)
(+31 files in other folders)
